--- a/src/app/myOffers/myOffers.page.html
+++ b/src/app/myOffers/myOffers.page.html
@@ -25,19 +25,18 @@
 
     <div *ngIf="myOffers">
 
-      <ion-card *ngFor="let myoffer of myOffers">
+      <ion-card *ngFor="let myOffer of myOffers">
         <ion-card-content>
 
-
-          <div *ngIf="myoffer.veiculoFotos.length > 0">
+          <div *ngIf="myOffer.veiculoFotos.length > 0">
             <swiper [config]="config" (slideChange)="onSlideChange()">
-              <ng-template swiperSlide *ngFor="let foto of myoffer.veiculoFotos ">
+              <ng-template swiperSlide *ngFor="let foto of myOffer.veiculoFotos ">
                 <img src="{{ foto.base64 }}" width="100" height="100" />
               </ng-template>
             </swiper>
           </div>
 
-          <div *ngIf="myoffer.veiculoFotos.length == 0">
+          <div *ngIf="myOffer.veiculoFotos.length == 0">
             <swiper [config]="config" (slideChange)="onSlideChange()">
               <ng-template swiperSlide *ngFor="let foto of fotoNaoDisponivel">
                 <img src="{{ foto.base64 }}" width="100" height="100" />
@@ -48,27 +47,32 @@
           <ion-grid class="dadosGrid" (click)="abrir(myOffer)">
             <ion-row aria-colspan="4">
               <ion-col class="cell-class">
-                <ion-label><b>{{ (!!myoffer.veiculo.preco) ? (myoffer.veiculo.preco*1).toLocaleString('pt-BR', {minimumFractionDigits: 2 , style: 'currency', currency: 'BRL'}) : 0 }} &nbsp;</b></ion-label>
+                Preço:<br> <ion-label><b>{{ (!!myOffer.veiculo.preco) ? (myOffer.veiculo.preco*1).toLocaleString('pt-BR', {minimumFractionDigits: 2 , style: 'currency', currency: 'BRL'}) : 0 }} &nbsp;</b></ion-label>
               </ion-col>
             </ion-row>
             <ion-row>
               <ion-col class="cell-class">
-                <ion-label class="semQuebra">{{ myoffer.veiculo.placa }} &nbsp;</ion-label>
+                Placa:<br>  <ion-label class="semQuebra">{{ myOffer.veiculo.placa }}</ion-label>
               </ion-col>
               <ion-col class="cell-class">
-                <ion-label class="semQuebra">{{ myoffer.veiculo.marcaDescricao }} &nbsp;</ion-label>
+                Marca:<br>  <ion-label class="semQuebra">{{ myOffer.veiculo.marcaDescricao }}</ion-label>
               </ion-col>
               <ion-col class="cell-class">
-                <ion-label class="semQuebra">{{ myoffer.veiculo.anoModeloDescricao }} &nbsp;</ion-label>
+                Combustível:<br> <ion-label class="semQuebra">{{ myOffer.veiculo.anoModeloDescricao }}</ion-label>
               </ion-col>
             </ion-row>
             <ion-row aria-colspan="4">
               <ion-col class="cell-class">
-                <ion-label>{{ myoffer.veiculo.modeloDescricao }} &nbsp;</ion-label>
+                Modelo:<br> <ion-label> {{ myOffer.veiculo.modeloDescricao }}</ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row aria-colspan="4">
+              <ion-col class="cell-class">
+                Status:<br>  <h1>{{ status(myOffer.status) }}</h1>
               </ion-col>
             </ion-row>
           </ion-grid>
-          Data de inclusão da oferta: {{myoffer.createdAtISO | date: 'dd/MM/yyyy HH:mm:ss'}}
+          Data de inclusão da oferta: {{myOffer.createdAtISO | date: 'dd/MM/yyyy HH:mm:ss'}}
 
           <!-- <div id="minusBox" slot="end" (click)="apagar()">
             <ion-icon name="remove-outline"></ion-icon>
