--- a/src/app/terms/terms.page.html
+++ b/src/app/terms/terms.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Termos</ion-title>
+    <ion-title>Termos e Condições de Uso</ion-title>
   </ion-toolbar>
 </ion-header>
 
