--- a/src/app/users/user/user.page.scss
+++ b/src/app/users/user/user.page.scss
@@ -33,7 +33,7 @@ ion-card {
 
 
 ion-textarea {
-  width: 100%;
+  width: 98%;
   text-align: justify;
   font-size: 20px !important;
   font-weight: 500;
@@ -46,7 +46,7 @@ ion-textarea {
 
 ion-input {
   height: 25px;
-  width: 200px;
+  width: 98%;
   text-align: left;
   align-items: left;
   align-content: left;
@@ -61,7 +61,7 @@ ion-input {
 
 ion-select {
   height: 25px;
-  width: 200px;
+  width: 98%;
   text-align: left;
   align-items: left;
   align-content: left;
@@ -80,6 +80,7 @@ ion-item-divider {
 
 ion-button {
   width: 50%;
+  height: 30px;;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -93,25 +94,6 @@ ion-button {
   border: 1px solid #5a5959 !important; 
   border-radius: 5px;
 }
-
-
-
-.emailGood {
-  align-items: center;
-  text-align: center;
-  align-content: center;
-  font-size: 20px;
-  color: #0f520c;
-}
-.emailBad {
-  align-items: center;
-  text-align: center;
-  align-content: center;
-  font-size: 20px;
-  color: #f70000;
-}
-
-
 
 .goBack {
   width: 20%;
