--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -17,7 +17,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="addBox" (click)="adicionar()">
+  <div id="addBox" (click)="abrir()">
     <ion-icon name="person-add-outline"></ion-icon>
   </div>
 
@@ -32,25 +32,27 @@
       <ion-card *ngFor="let user of users">
         <ion-card-content>
 
-          <ion-grid class="dadosGrid" (click)="abrir(user.id)">
+          <ion-grid class="dadosGrid" (click)="abrir(user)">
             <ion-row aria-colspan="4">
               <ion-col class="cell-class">
-                <ion-label><b>{{ user.name }}</b></ion-label>
+                Nome:<br><ion-label><b>{{ user.name }}</b></ion-label>
               </ion-col>
             </ion-row>
             <ion-row>
               <ion-col class="cell-class">
-                <ion-label class="semQuebra">{{ user.mail }}</ion-label>
+                e-mail:<br><ion-label class="semQuebra">{{ user.mail }}</ion-label>
               </ion-col>
               <ion-col class="cell-class">
-                <ion-label class="semQuebra">{{ user.phone }}</ion-label>
+                Telefone:<br><ion-label class="semQuebra">{{ user.phone }}</ion-label>
               </ion-col>
               <ion-col class="cell-class">
-                <ion-label class="semQuebra">{{ (user.role == "platform_manager_access")? "Gerente": "Vendedor"}}</ion-label>
+                Função:<br><ion-label class="semQuebra">{{ (user.role == "platform_manager_access")? "Gerente": "Vendedor"}}</ion-label>
               </ion-col>
             </ion-row>
           </ion-grid>
-          <div id="minusBox" slot="end" (click)="apagar()">
+          Data de inclusão do usuário: {{user.createdAtISO | date: 'dd/MM/yyyy HH:mm:ss'}}
+
+          <div id="minusBox" slot="end" (click)="apagar(user)">
             <ion-icon name="remove-outline"></ion-icon>
             <ion-icon name="person-outline"></ion-icon>
           </div>
@@ -62,4 +64,10 @@
 
     </div>
   </div>
+
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5" pullMin="200" pullMax="300">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
+
 </ion-content>
