--- a/src/global.scss
+++ b/src/global.scss
@@ -60,8 +60,8 @@
 }
 
 .custom-alert-class {
-    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
-    font-size: 1.3em !important;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.1em !important;
     --color:#070707;
     --border-radius: 15px;
     --border-style: solid;
@@ -72,7 +72,7 @@
 
 .custom-loader-class {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.3em !important;
+    font-size: 1.1em !important;
     --background:#ffffff;
     --border-radius: 15px;
     --spinner-color:#040694;
