--- a/src/app/company/company.page.html
+++ b/src/app/company/company.page.html
@@ -117,28 +117,38 @@
               <ion-input #items (keypress)="onKeyPressed($event, 11)" placeholder="Bairro" type="text" [(ngModel)]="companyData.bairro" [value]="companyData.bairro"></ion-input>
             </ion-col>
           </ion-row>
+
+
           <ion-row>
             <ion-col>
-              <!-- 12 -->
-              <ion-input #items (keypress)="onKeyPressed($event, 12)" placeholder="Cidade" type="text" [(ngModel)]="companyData.cidade" [value]="companyData.cidade"></ion-input>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col>
-              <!-- 13 -->
-              <ion-select #items interface="action-sheet" placeholder="UF" cancelText="Cancelar" [interfaceOptions]="estadoActionSheetOptions" [(ngModel)]="companyData.uf">
-                <ion-select-option *ngFor="let estado of Estados" [value]="estado.Sigla">
-                  {{estado.Sigla}} - {{estado.Estado}}
+              <ion-select #items interface="action-sheet" placeholder="País" cancelText="Cancelar" [interfaceOptions]="paisActionSheetOptions" [(ngModel)]="companyData.pais" [(value)]="companyData.pais" (ionChange)="preencheUfs()">
+                <ion-select-option *ngFor="let pais of Paises" [value]="pais.nome">
+                  {{pais.nome}}
                 </ion-select-option>
               </ion-select>
             </ion-col>
           </ion-row>
+
           <ion-row>
             <ion-col>
-              <!-- 14 -->
-              <ion-input #items (keypress)="onKeyPressed($event, 14)" placeholder="Pais" type="text" [(ngModel)]="companyData.pais" [value]="companyData.pais"></ion-input>
+              <ion-select #items interface="action-sheet" placeholder="UF" cancelText="Cancelar" [interfaceOptions]="estadoActionSheetOptions" [(value)]="companyData.uf" [(ngModel)]="companyData.uf" (ionChange)="preencheCidades()">
+                <div *ngFor="let estado of Estados">
+                  <ion-select-option *ngIf="estado.pais == companyData.pais" [value]="estado.uf">{{estado.uf}} - {{estado.estado}}</ion-select-option>
+              </div>
+            </ion-select>
             </ion-col>
           </ion-row>
+
+          <ion-row>
+            <ion-col>
+              <ion-select #items interface="action-sheet" placeholder="Cidade" cancelText="Cancelar" [interfaceOptions]="cidadeActionSheetOptions" [(ngModel)]="companyData.cidade" [(value)]="companyData.cidade">
+                <div *ngFor="let cidade of Cidades">
+                  <ion-select-option  *ngIf="cidade.uf == companyData.uf" [value]="cidade.nome">{{cidade.nome}}</ion-select-option>
+              </div>
+              </ion-select>
+            </ion-col>
+          </ion-row>
+
 
           <ion-row aria-colspan="2">
             <ion-col>
