--- a/src/app/myOffers/myOffers.page.html
+++ b/src/app/myOffers/myOffers.page.html
@@ -20,6 +20,7 @@
 
     <div class="carregando" *ngIf="!myOffers">
       <div class="carregandoTitle">{{carregando}}</div>
+      <div><img src="../../assets/imgs/carregando.gif" height="70" width="70"></div>
     </div>
 
 
