--- a/src/app/offers/offers.page.html
+++ b/src/app/offers/offers.page.html
@@ -9,10 +9,10 @@
 
 <ion-content [fullscreen]="true">
 
-  <div id="filtros">
+  <div id="filtros" (click)="openFilters()">
     <ion-grid>
       <ion-row>
-        <ion-col>
+        <ion-col >
           <ion-label>Filtros:</ion-label>
           <ion-icon color="primary" name="filter-outline"></ion-icon>
         </ion-col>
@@ -22,8 +22,9 @@
 
   <div id="container">
 
-    <div class="carregando" *ngIf="!offers">
-      <div class="carregandoTitle">{{carregando}}</div>
+    <div class="carregando" *ngIf="carregando">
+      <div class="carregandoTitle">Procurando Ofertas...</div>
+      <div><img src="../../assets/imgs/carregando.gif" height="70" width="70"></div>
     </div>
 
     <div *ngIf="offers">
@@ -65,7 +66,15 @@
                 <ion-label>Cor: {{ offer.veiculo.cor }}</ion-label>
               </ion-col>
             </ion-row>
-            <ion-row aria-colspan="2">
+            <ion-row aria-colspan="2" *ngIf="offer.perimetros">
+              <ion-col class="cell-class">
+
+                <ion-label>{{ offer.perimetros.perimeter.description }} Range:{{ offer.perimetros.perimeter.range }}Km(s) </ion-label>
+                <ion-label>Coord.:{{ offer.perimetros.perimeter.latitude }}, {{ offer.perimetros.perimeter.longitude }}</ion-label>
+
+              </ion-col>
+            </ion-row>
+            <ion-row aria-colspan="2" *ngIf="offer.veiculo.codigoFipe != ''">
               <ion-col class="cell-class">
                 <ion-label>Fipe:</ion-label>
                 <ion-label>{{ offer.veiculo.codigoFipe }}</ion-label> &nbsp;
@@ -98,5 +107,13 @@
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5" pullMin="200" pullMax="300">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
+
+  <ion-modal id="sheet-modal" [isOpen]="isModalOpen">
+    <ng-template>
+      <app-modal-content>
+
+      </app-modal-content>
+    </ng-template>
+  </ion-modal>
 
 </ion-content>
