--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -24,6 +24,7 @@
   <div id="container">
     <div class="carregando" *ngIf="!users">
       <div class="carregandoTitle">{{carregando}}</div>
+      <div><img src="../../assets/imgs/carregando.gif" height="70" width="70"></div>
     </div>
 
     <div *ngIf="users">
