--- a/src/global.scss
+++ b/src/global.scss
@@ -39,42 +39,130 @@
 
 
 .toast-good-custom-class {
-    --color:#ffffff;
-    --border-radius:5px;
-    --border-style:solid;
-    --border-width:3px;    
-    --background:#1a992b;
-    --button-color:#ffffff;
+    --color: #ffffff;
+    --border-radius: 5px;
+    --border-style: solid;
+    --border-width: 3px;
+    --background: #1a992b;
+    --button-color: #ffffff;
     font-size: 18px;
     font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
+
 .toast-bad-custom-class {
-    --color:#ffffff;
-    --border-radius:5px;
-    --border-style:solid;
-    --border-width:3px;    
-    --background:#ff1818;
-    --button-color:#ffffff;
+    --color: #ffffff;
+    --border-radius: 5px;
+    --border-style: solid;
+    --border-width: 3px;
+    --background: #ff1818;
+    --button-color: #ffffff;
     font-size: 18px;
     font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
 
 .custom-alert-class {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1em !important;
-    --color:#070707;
+    --color: #070707;
     --border-radius: 15px;
     --border-style: solid;
-    --background:#ffffff;
-    --button-color:#0716f3;
+    --background: #ffffff;
+    --button-color: #0716f3;
     --max-width: 85%;
 }
 
 .custom-loader-class {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1em !important;
-    --background:#ffffff;
+    --background: #ffffff;
     --border-radius: 15px;
-    --spinner-color:#040694;
+    --spinner-color: #040694;
     --max-width: 85%;
+}
+
+
+
+
+#mapInfoWindow {
+
+    display: flexbox;
+    height: auto;
+    font-size: 14px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    align-items: flex-start;
+    align-content: space-between;
+
+
+    .inputTextClass {
+        height: 30px;
+        width: 95%;
+        font-size: 16px !important;
+        font-weight: 500;
+        border: 1px solid #5a5959;
+        border-radius: 5px;
+        background: #ffffff;
+        color: black;
+        padding: 4px !important;
+        margin: 10px;
+        text-align: left;
+    }
+
+    .inputClass {
+        height: 30px;
+        width: 95%;
+        font-size: 16px !important;
+        font-weight: 500;
+        border: 1px solid #5a5959;
+        border-radius: 5px;
+        background: #ffffff;
+        color: black;
+        padding: 4px !important;
+        margin: 10px;
+        text-align: right;
+    }
+
+    .btnGoodClass {
+        height: 30px;
+        width: 40%;
+        margin: 10px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 18px !important;
+        font-weight: 500;
+        border: 1px solid #5a5959;
+        border-radius: 5px;
+        background: #07ad23;
+        color: #ffffff;
+        padding: 4px !important;
+
+    }
+
+    .btnBadtClass {
+        height: 30px;
+        width: 40%;
+        margin: 10px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 18px !important;
+        font-weight: 500;
+        border: 1px solid #5a5959;
+        border-radius: 5px;
+        background: #f5f106;
+        color: #0e0d0d;
+        padding: 4px !important;
+
+    }
+
+    .divClass {
+        height: 30px;
+        width: 100%;
+        margin: 10px;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 18px !important;
+        font-weight: 500;
+        background: #ffffff;
+        color: #fc0202;
+        padding: 4px !important;
+        text-align: center;
+
+    }
+
 }
