--- a/src/app/myVehicles/vehicle/vehicle.page.html
+++ b/src/app/myVehicles/vehicle/vehicle.page.html
@@ -175,6 +175,10 @@
           </ion-row>
           <ion-row>
             <ion-col>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>
               <ion-input type="text" placeholder="Latitude" [(ngModel)]="vehicle.latitude" [(value)]="vehicle.latitude"></ion-input>
             </ion-col>
           </ion-row>
@@ -261,5 +265,6 @@
   <div class="goBack">
     <ion-icon (click)="goBack()" color="primary" name="arrow-back-sharp"></ion-icon>
   </div>
+
 
 </ion-content>
