--- a/src/app/company/company.page.scss
+++ b/src/app/company/company.page.scss
@@ -128,8 +128,8 @@ ion-button {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
   font-size: 24px !important;
-  color:#dbd7d7 !important; 
-  border: 1px solid #5a5959 !important; 
+  color: #dbd7d7 !important;
+  border: 1px solid #5a5959 !important;
   border-radius: 5px;
 }
 
@@ -140,10 +140,10 @@ ion-button {
   align-items: center;
   text-align: center;
   align-content: center;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 900;
   font-size: 22px !important;
-  color:#0f46ec !important; 
+  color: #0f46ec !important;
 }
 
 
@@ -211,8 +211,42 @@ ion-button {
 }
 
 select::placeholder {
-  opacity:0.7;
+  opacity: 0.7;
 }
+
 input::placeholder {
- opacity:0.7;
+  opacity: 0.7;
+}
+
+
+
+ion-accordion-group {
+  height: auto;
+}
+
+#divMap {
+  width: 100% !important;
+  margin: 0;
+  padding: 0;
+
+  #map {
+    width: 300px;
+    height: 500px;
+    margin: 0;
+    padding: 0;
+  }
+
+  #pac-input {
+    width: 100% !important;
+    height: 35px;
+    text-align: left;
+    font-size: 18px !important;
+    font-weight: 100;
+    border: 1px solid #5a5959;
+    border-radius: 5px;
+    background: white;
+    color: black;
+    padding: 4px !important;
+  }
+
 }
