--- a/src/app/perimeters/perimeters.page.html
+++ b/src/app/perimeters/perimeters.page.html
@@ -13,55 +13,11 @@
 <ion-content [fullscreen]="true">
 
 
-  <div #map id="map"></div>
-
-  <!-- <div id="addBox" (click)="adicionar()">
-    <ion-icon name="add-outline"></ion-icon>
-    <ion-icon name="location-outline"></ion-icon>
-  </div>
+  <div name="map" id="map"></div>
 
 
-  <div id="container">
-
-    <div class="carregando" *ngIf="!perimeters">
-      <div class="carregandoTitle">{{carregando}}</div>
-      <div><img src="../../assets/imgs/carregando.gif" height="70" width="70"></div>
-    </div>
-
-    <div *ngIf="perimeters">
-
-      <ion-card *ngFor="let perimeter of perimeters">
-        <ion-card-content>
-
-          <ion-grid class="dadosGrid" (click)="abrir(perimeter.id)">
-            <ion-row>
-              <ion-col class="cell-class">
-                <ion-label>Range (km):<b>{{ perimeter.range }}</b></ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col class="cell-class">
-                <ion-label>Latitude: {{ perimeter.latitude }}</ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col class="cell-class">
-                <ion-label>Longitude: {{ perimeter.longitude }}</ion-label>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-          <div id="minusBox" (click)="apagar()">
-            <ion-icon name="remove-outline"></ion-icon>
-            <ion-icon name="location-outline"></ion-icon>
-          </div>
-
-
-        </ion-card-content>
-
-      </ion-card>
-
-    </div>
-  </div>
- -->
+ <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5" pullMin="100" pullMax="200">
+  <ion-refresher-content></ion-refresher-content>
+</ion-refresher>
 
 </ion-content>
